# Ray-Framework

./: .gitignore  CMakeLists.txt
include/game/: game.h
src/framework/: main.c
src/game/: game.c
